--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fundamentus-unofficial-api",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "This is an module to scrap stock market data from https://fundamentus.com.br, a website that makes available financial and fundamentalist information about companies listed in Bovespa.",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "indicadores",
     "indicadores fundamentalistas",
     "api",
+    "bovespa",
     "ibovespa"
   ],
   "author": "margato",
